# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.1
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'index.ts'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.2
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.4
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.5
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'index.ts'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.6
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_tgz_with_explicit_index_js_works.7
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.1
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'index.ts'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.2
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_explicit_index_js_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.1
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'index.ts'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.2
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_with_index_ts_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.1
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.2
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('index.ts')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_from_zip_without_index_ts_but_frontend_tsx_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.1
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'index.ts'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.2
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('frontend.tsx')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.3
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.4
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'plugin.json'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.5
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" = 'frontend.tsx'
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  LIMIT 21
  FOR
  UPDATE
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.6
  '
  SELECT "analytickit_pluginsourcefile"."id",
         "analytickit_pluginsourcefile"."plugin_id",
         "analytickit_pluginsourcefile"."filename",
         "analytickit_pluginsourcefile"."source",
         "analytickit_pluginsourcefile"."status",
         "analytickit_pluginsourcefile"."transpiled",
         "analytickit_pluginsourcefile"."error"
  FROM "analytickit_pluginsourcefile"
  WHERE ("analytickit_pluginsourcefile"."filename" IN ('index.ts')
         AND "analytickit_pluginsourcefile"."plugin_id" = 2)
  '
---
# name: TestPluginSourceFile.test_sync_from_plugin_archive_twice_from_zip_with_index_ts_replaced_by_frontend_tsx_works.7
  '
  SELECT COUNT(*) AS "__count"
  FROM "analytickit_pluginsourcefile"
  '
---
